[package]
name = "moose"
version = "0.1.0"
categories = ["development-tools"]
authors = ["Sergei Vorobev <xvorsx@gmail.com>"]
description = "Command line tool to work with buck2 and pypi simple indexes"
license = "MIT"
edition = "2021"
readme = "README.md"
rust-version = "1.70"

[profile.release]
opt-level = 3

[features]
default = ["native-tls"]
native-tls = ['rattler_installs_packages/native-tls']
rustls-tls = ['rattler_installs_packages/rustls-tls']

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
console = { version = "0.15.7", features = ["windows-console-colors"] }
dirs = "5.0.1"
indexmap = "2.0.1"
indicatif = "0.17.7"
itertools = "0.11.0"
miette = { version = "5.10.0", features = ["fancy"] }
rattler_installs_packages = { path = "third_party/rip/crates/rattler_installs_packages", default-features = false, features = ["resolvo"] }
tabwriter = { version = "1.3.0", features = ["ansi_formatting"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.107"
